# hello_rocket

./: Cargo.toml  README.md
src/: main.rs
src/lib/: bar.rs  foo.rs  mod.rs
static/: foobar.html
templates/: index.html.tera
